dataclients/kubernetes/testdata/mixed/ingress-routegroup-catchall.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qux
  namespace: foo
spec:
  rules:
    - host: www.example.org
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: qux
                port:
                  number: 80
---
apiVersion: zalando.org/v1
kind: RouteGroup
metadata:
  name: qux-rg
spec:
  hosts:
    - www.example.org
  backends:
    - name: shunt
      type: shunt
  routes:
    - pathSubtree: /
      predicates:
        - HeaderRegexp("User-Agent", "^FooBar$")
      filters:
        - status(403)
        - inlineContent("Forbidden")
      backends:
        - backendName: shunt
---
apiVersion: v1
kind: Service
metadata:
  name: qux
  namespace: foo
spec:
  clusterIP: 10.3.190.97
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    application: myapp
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    application: myapp
  name: qux
  namespace: foo
subsets:
  - addresses:
      - ip: 10.2.9.103
      - ip: 10.2.9.104
    ports:
      - port: 8080
        protocol: TCP
